change: 資料庫table（pokemon_xp, unlocked_stages, pokemon_selected_stage)合併、更新method配合新db、拿掉pokemon_id包含的_1, _2, _3. fix: 讓抽獎時無法切換tab